--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 td, th {
 	border: 1px solid;
   }
-  
-  body {
-  background-color: lightblue;
+#headers {
+	font-size:20px solid;
+  }
+table {
+	text-align:center;
+	font-size:20px;
   }
   
