--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@ td, th {
 	border: 1px solid;
   }
   
-h1 {
-	text-align:center;
-	font-style:italic;
-  }
+headers {
+font-style: italic;
+font-size: 20px;
+text-align: center;
+}
   
