--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
 td, th {
 	border: 1px solid;
   }
-  
+
+h1 {
+text-align:center;
+}
+
 #Planets {
 text-align:center;
 }
-  
+
+.headers {
+font-style:italic;
+}
