Added maximum for each row with css

--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,33 @@ color:darkblue;
 color:red;
 font-weight:bold;
 }
+
+.Jupiter-Diameter {
+color:red;
+font-weight:bold;
+}
+
+.Earth-Density {
+color:red;
+font-weight:bold;
+}
+
+.Jupiter-Gravity {
+color:red;
+font-weight:bold;
+}
+
+.Jupiter-EV {
+color:red;
+font-weight:bold;
+}
+
+.Mars-RP {
+color:red;
+font-weight:bold;
+}
+
+.Mars-Day {
+color:red;
+font-weight:bold;
+}
