Testing Image length and width

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ color:brown;
 color:darkblue;
 }
 
+.EarthPic {
+Width: 500px;
+Height: 500px;
+}
+
 .Jupiter-Mass {
 color:red;
 font-weight:bold;
