Edited image size with css

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,21 @@ Width: 200px;
 Height: 200px;
 }
 
+.MarsPic {
+Width: 200px;
+Height: 200px;
+}
+
+.JupiterPic {
+Width: 200px;
+Height: 200px;
+}
+
+.UranusPic {
+Width: 200px;
+Height: 200px;
+}
+
 .Jupiter-Mass {
 color:red;
 font-weight:bold;
