--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 td, th {
 	border: 1px solid;
   }
+  
+body {
+background-color:blue;
+}
+
+h1{
+text-align:center;
+font-style:underline;
+color:orange;
+}
 
 #Planets {
 text-align: center;
